# self-service-portal

./: .env.example  .gitignore  README.md  package-lock.json  package.json
scripts/: add-skip-ci-guard.sh  apply-skip-ci-guard.py  godaddy-dns.mjs  vercel-env.sh  worklap-discover.mjs
src/app/: layout.tsx  page.tsx  providers.tsx
src/app/api/trpc/[trpc]/: route.ts
src/app/new/: page.tsx
src/app/requests/: page.tsx
src/components/: header.tsx
src/components/forms/: generic-form.tsx
src/lib/: repos.ts  yaml.ts
src/server/: auth.ts
src/server/github/: app.ts  issue.ts
src/server/schemas/: _types.ts  definitions.ts  index.ts
src/server/trpc/: trpc.ts
src/server/trpc/routers/: _app.ts  catalog.ts  request.ts
src/server/worklap/: client.ts  task.ts
src/trpc/: client.ts  provider.tsx
tui/: .env.example  README.md  pyproject.toml
tui/portal_tui/: __init__.py  __main__.py  app.py  config.py
tui/portal_tui/screens/: detail.py  queue.py
tui/portal_tui/services/: audit.py  claude_runner.py  git_local.py  github.py  tofu.py
