[project]
name = "portal-tui"
version = "0.1.0"
description = "ittikar self-service portal TUI — process pending request issues with claude -p + tofu"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.85.0",
  "PyGithub>=2.4.0",
  "rich>=13.9.0",
  "python-dotenv>=1.0.1",
]

[project.scripts]
portal-tui = "portal_tui.__main__:main"
pt = "portal_tui.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["portal_tui"]
